crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@no_integer_literal_base_completion_without_size.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
input_file: crates/ide/src/completion/engine/fixtures/no_integer_literal_base_completion_without_size.v
---
[]
