crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@no_named_port_expr_fallback_for_unknown_type.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
assertion_line: 191
expression: items
input_file: crates/ide/src/completion/engine/fixtures/no_named_port_expr_fallback_for_unknown_type.v
---
[
    CompletionItem {
        label: "sig",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "sig",
                del: 68..68,
            },
        ),
        snippet_edit: None,
    },
]
