crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@prefers_data_decl_for_non_ansi_port.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
assertion_line: 191
expression: items
input_file: crates/ide/src/completion/engine/fixtures/prefers_data_decl_for_non_ansi_port.v
---
[
    CompletionItem {
        label: "sig1",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "sig1",
                del: 94..94,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "sig8",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "sig8",
                del: 94..94,
            },
        ),
        snippet_edit: None,
    },
]
