crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__filters_already_assigned_named_param_names_in_list.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
---
[
    CompletionItem {
        label: "Z",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: ".Z()",
                del: 120..120,
            },
        ),
        snippet_edit: Some(
            TextEditItem {
                ins: ".Z(${1:expr})",
                del: 120..120,
            },
        ),
    },
]
