crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__filters_named_param_assign_expr_by_width.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
---
[
    CompletionItem {
        label: "P4",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "P4",
                del: 117..117,
            },
        ),
        snippet_edit: None,
    },
]
