crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__filters_named_port_connection_expr_by_width.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
---
[
    CompletionItem {
        label: "sig4",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "sig4",
                del: 100..100,
            },
        ),
        snippet_edit: None,
    },
]
