crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__offers_module_instantiation_snippets.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
---
[
    CompletionItem {
        label: "Foo",
        kind: Snippet,
        edit: Some(
            TextEditItem {
                ins: "Foo u0();",
                del: 34..36,
            },
        ),
        snippet_edit: Some(
            TextEditItem {
                ins: "Foo ${1:u0}(${2});",
                del: 34..36,
            },
        ),
    },
    CompletionItem {
        label: "Foo #(...)",
        kind: Snippet,
        edit: Some(
            TextEditItem {
                ins: "Foo #() u0();",
                del: 34..36,
            },
        ),
        snippet_edit: Some(
            TextEditItem {
                ins: "Foo #(${1}) ${2:u0}(${3});",
                del: 34..36,
            },
        ),
    },
]
