crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__prefers_data_decl_for_non_ansi_port.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
---
[
    CompletionItem {
        label: "sig8",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "sig8",
                del: 94..94,
            },
        ),
        snippet_edit: None,
    },
]
